--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -4,8 +4,9 @@
 <div class="row">
    
     <div class="col">
-        <app-personajes [productos] = "productos"></app-personajes>
-        <!-- <h3>Lista de productos</h3>
+        <app-personajes></app-personajes>
+        <!--<app-personajes [productos] = "productos"></app-personajes>
+         <h3>Lista de productos</h3>
         <hr>
          <ul>
             <li *ngFor="let producto of productos"> {{producto.nombre}}  -  {{producto.precio | number}}</li>
@@ -14,12 +15,14 @@
     </div>
     <!-- [productos]="productos" -->
     <div class="col">
-        <app-agregar 
+        <app-agregar [nuevo]="nuevo"></app-agregar>
+   
+    </div>
+<!--
+    <app-agregar 
         
         [nuevo]="nuevo" (onNuevoProducto)="agregarNuevoProducto($event)"
         ></app-agregar>
-   
-    </div>
-
+ -->
  
 </div>
